Adding name to the register
